# deckgl-dash

./: .babelrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION  DeckGL_Wrapper.md  MANIFEST.in  Makefile  Project.toml  README.md  _validate_init.py  eslint.config.js  hatch_build.py  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  usage.py  webpack.config.js
.github/workflows/: docs.yml  publish-test.yml  publish.yml  test.yml
R/: deckGL.R  internal.R
dash_deckgl/: DeckGL.py  __init__.py  colors.py  component.py  dash_deckgl.min.js  dash_deckgl.min.js.LICENSE.txt  dash_deckgl.min.js.bak  metadata.json
dash_deckgl/layers/: __init__.py  aggregation.py  base.py  core.py  geo.py
deckgl_dash/: DeckGL.py  __init__.py  _imports_.py  binary.py  bounds.py  colors.py  component.py  coordinates.py  deckgl_dash.min.js  deckgl_dash.min.js.LICENSE.txt  drawing.py  metadata.json  package-info.json  timefilter.py
deckgl_dash/layers/: __init__.py  aggregation.py  base.py  core.py  geo.py
deckgl_dash/maplibre/: __init__.py  config.py  layers.py  sources.py
docs/: index.md
docs/api/: aggregation-layers.md  colors.md  coordinates.md  core-layers.md  deckgl-component.md  drawing.md  geo-layers.md  maplibre.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: binary-data-transport.md  coordinate-conversion.md  drawing-and-editing.md  layer-data-updates.md  layer-ordering.md  maplibre-integration.md  time-slider-animation.md
docs/troubleshooting/: gotchas.md
examples/: README.md  _common.py  all_layers_deferred_visibility_demo.py  basic_usage.py  binary_path_colors_demo.py  coordinate_click_demo.py  directed_path_demo.py  drawing_demo.py  feature_list_highlight_demo.py  geojson_deferred_visibility_demo.py  hexagon_deferred_load_demo.py  maplibre_basemap_switch_demo.py  maplibre_demo.py  maplibre_vector_demo.py  maplibre_wms_demo.py  multicolor_path_demo.py  path_arrows_time_slider_demo.py  performance_test_demo.py  python_helpers_demo.py  sf_satellite_bounds.json  time_slider_demo.py  zoom_gated_layers_demo.py  zoom_to_fit_demo.py
man/: deckGL.Rd
scripts/: bump_version.py  check_versions.py  release.py
src/: DashDeckgl.jl
src/demo/: App.js
src/jl/: deckgl.jl
src/lib/: index.js
src/lib/components/: DeckGL.react.js
src/lib/components/hooks/: useDeckEvents.js  useDrawing.js  useMaplibre.js  useTimeFilterAnimation.js
src/lib/layers/: DirectedPathLayer.js  MultiColorPathLayer.js
src/lib/layers/__tests__/: DirectedPathLayer.test.js
src/lib/utils/: colorScales.js  debug.js  drawingManager.js  eventHandler.js  layerOrder.js  layerRegistry.js  timeFilter.js  zoomVisibility.js
src/lib/utils/__tests__/: binaryData.test.js  colorScales.test.js  eventHandler.test.js  layerOrder.test.js  layerRegistry.test.js  timeFilter.test.js  zoomVisibility.test.js
tests/: conftest.py  test_binary.py  test_binary_paths.py  test_bounds.py  test_colors.py  test_component.py  test_coordinates.py  test_drawing.py  test_feature_list_highlight.py  test_integration_smoke.py  test_layer_data.py  test_layer_order.py  test_layers.py  test_maplibre.py  test_maplibre_toggle.py  test_timefilter.py  test_version.py
