[tool.poetry]
name = "deckgl-dash"
version = "0.10.0"
description = "Direct deck.gl wrapper for Plotly Dash"
authors = ["Scott"]
readme = "README.md"
license = "MIT"
packages = [{include = "deckgl_dash"}]
classifiers = [
    "Framework :: Dash",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/kihaji/deckgl-dash"
"Bug Tracker" = "https://github.com/kihaji/deckgl-dash/issues"

[tool.poetry.dependencies]
python = "^3.10"
dash = ">=3.0.0,<5"
h3 = {version = "^4.0.0", optional = true}
pyproj = {version = ">=3.0.0", optional = true}
mgrs = {version = ">=1.4.0", optional = true}

[tool.poetry.extras]
test = ["h3"]
coordinates = ["pyproj", "mgrs"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
dash = {extras = ["testing"], version = "^3.4"}
pyyaml = "^6.0.3"
selenium = ">=4.1,<4.3"  # floor at 4.x (3.141 breaks with urllib3 2); ceiling from dash[testing]'s selenium<=4.2.0 pin
pytest-cov = "^7.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0"
pymdown-extensions = "^10.0"
mkdocs-minify-plugin = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
