[tool.poetry]
name = "deckgl-dash"
version = "0.10.0"
description = "Direct deck.gl wrapper for Plotly Dash"
authors = ["Scott"]
readme = "README.md"
license = "MIT"
packages = [{include = "deckgl_dash"}]
classifiers = [
    "Framework :: Dash",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/kihaji/deckgl-dash"
"Bug Tracker" = "https://github.com/kihaji/deckgl-dash/issues"

[tool.poetry.dependencies]
python = "^3.11"
dash = ">=3.0.0,<5"
h3 = {version = "^4.0.0", optional = true}
pyproj = {version = ">=3.0.0", optional = true}
mgrs = {version = ">=1.4.0", optional = true}

[tool.poetry.extras]
test = ["h3"]
coordinates = ["pyproj", "mgrs"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
dash = {extras = ["testing"], version = "^3.4"}
pyyaml = "^6.0.3"
selenium = ">=4.1,<4.3"  # floor at 4.x (3.141 breaks with urllib3 2); ceiling from dash[testing]'s selenium<=4.2.0 pin
pytest-cov = "^7.1.0"
ruff = "^0.15.20"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0"
pymdown-extensions = "^10.0"
mkdocs-minify-plugin = "^0.8"

[tool.ruff]
line-length = 150
target-version = "py311"
extend-exclude = ["deckgl_dash/DeckGL.py"]  # auto-generated by dash-generate-components

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM"]  # UP (pyupgrade) omitted: rewriting every Optional[...] annotation is churn without benefit
ignore = [
    "E251", "E252",  # project style: spaces around '=' in keyword arguments (CLAUDE.md)
    "E741",          # ambiguous single-letter names appear in math-heavy geo code
    "SIM108",        # ternary rewrites often hurt readability in this codebase
    "UP015",         # explicit open() modes are fine
]

[tool.pyright]
include = ["deckgl_dash", "examples"]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
