[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckgl-dash"
version = "0.10.0"
description = "Direct deck.gl wrapper for Plotly Dash"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Scott Lemke", email = "scott.r.lemke@gmail.com" },
]
classifiers = [
    "Framework :: Dash",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "dash>=3.0.0,<5",
]

[project.optional-dependencies]
test = ["h3>=4.0.0,<5"]
coordinates = ["pyproj>=3.0.0", "mgrs>=1.4.0"]
binary = ["numpy>=2.2"]

[project.urls]
Homepage = "https://github.com/kihaji/deckgl-dash"
"Bug Tracker" = "https://github.com/kihaji/deckgl-dash/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10",
    "dash[testing]>=3.4,<4",
    "pyyaml>=6.0.3",
    "selenium>=4.1,<4.3",  # floor at 4.x (3.141 breaks with urllib3 2); ceiling from dash[testing]'s selenium<=4.2.0 pin
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "numpy>=2.2",
]
docs = [
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
    "mkdocs-minify-plugin>=0.8",
]

[tool.uv]
# Dev environments get both groups by default (matches the old poetry install behavior)
default-groups = ["dev", "docs"]

# ===========================================
# Build: hatchling with a JS build hook — wheels are self-building (phase 2 of #40).
# The bundle is NOT git-tracked; hatch_build.py runs `npm ci && npm run build:js`
# during wheel builds (and on editable installs when the bundle is missing).
# ===========================================

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["deckgl_dash"]
# Generated by the build hook (gitignored), so hatchling must be told to ship them.
# Scoped to the wheel: the sdist is self-building and must NOT carry the bundle.
artifacts = [
    "deckgl_dash/deckgl_dash.min.js",
    "deckgl_dash/deckgl_dash.min.js.LICENSE.txt",
]
# The 10 MB source map stays out of the wheel (#23); dev checkouts keep it on disk
exclude = ["deckgl_dash/*.map"]

[tool.hatch.build.targets.sdist]
# Self-building sdist: ships the JS sources + lockfile, not the built bundle.
# Building a wheel from this sdist requires Node 20+ (documented in README).
include = [
    "deckgl_dash",
    "src/lib",
    "package.json",
    "package-lock.json",
    "webpack.config.js",
    ".babelrc",
    "hatch_build.py",
    "_validate_init.py",
    "README.md",
    "LICENSE",
]
exclude = ["deckgl_dash/*.map", "deckgl_dash/deckgl_dash.min.js", "deckgl_dash/deckgl_dash.min.js.LICENSE.txt"]

[tool.ruff]
line-length = 150
target-version = "py311"
extend-exclude = ["deckgl_dash/DeckGL.py"]  # auto-generated by dash-generate-components

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM"]  # UP (pyupgrade) omitted: rewriting every Optional[...] annotation is churn without benefit
ignore = [
    "E251", "E252",  # project style: spaces around '=' in keyword arguments (CLAUDE.md)
    "E741",          # ambiguous single-letter names appear in math-heavy geo code
    "SIM108",        # ternary rewrites often hurt readability in this codebase
    "UP015",         # explicit open() modes are fine
]

[tool.pyright]
include = ["deckgl_dash", "examples"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
